
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
add_subdirectory(lua)
add_subdirectory(base)

add_subdirectory(nc_backplot)
add_subdirectory(nc_model)
add_subdirectory(nc_stock)
add_subdirectory(nc_transform)
add_subdirectory(nc_delay)
add_subdirectory(nc_bounds)
add_subdirectory(nc_tooltable)
add_subdirectory(nc_identity)
add_subdirectory(nc_offset_rotational_origin)
add_subdirectory(nc_feedrate)
add_subdirectory(nc_svgpath)
add_subdirectory(nc_lathe_roughing)
add_subdirectory(nc_rename_axis)
add_subdirectory(nc_contour_pocket)
add_subdirectory(nc_arcfit)
add_subdirectory(nc_shortlines)
add_subdirectory(nc_slice)
add_subdirectory(nc_annotate)
add_subdirectory(nc_linear_ramp)
add_subdirectory(nc_mill_roughing)
